<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/taxi_bckg">
    <TextView android:textStyle="bold" android:layout_width="wrap_content" android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:text="@string/edi_taxis" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_marginRight="18dp" android:layout_marginTop="45dp"></TextView>
    <TextView android:textStyle="bold" android:layout_width="wrap_content" android:id="@+id/textView2" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:text="@string/central_taxis_edi" android:layout_below="@+id/textView1" android:layout_centerHorizontal="true" android:layout_marginTop="63dp"></TextView>
    <View android:background="#ffffff" android:layout_width="fill_parent" android:id="@+id/view1" android:layout_height="1dip" android:layout_below="@+id/textView5" android:layout_alignParentLeft="true"></View>
    <View android:background="#ffffff" android:layout_width="fill_parent" android:id="@+id/view2" android:layout_height="1dip" android:layout_below="@+id/textView3" android:layout_alignParentLeft="true"></View>
    <TextView android:layout_width="wrap_content" android:id="@+id/textView3" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:autoLink="phone" android:text="@string/central_taxis_num" android:phoneNumber="true" android:layout_below="@+id/textView2" android:layout_alignLeft="@+id/textView2"></TextView>
    <TextView android:layout_width="wrap_content" android:id="@+id/textView5" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:autoLink="phone" android:text="@string/city_cabs_phone" android:phoneNumber="true" android:layout_below="@+id/textView4" android:layout_alignLeft="@+id/textView4"></TextView>
    <TextView android:textStyle="bold" android:layout_width="wrap_content" android:id="@+id/textView4" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:text="@string/city_cabs_edi" android:layout_below="@+id/view2" android:layout_alignLeft="@+id/textView3" android:layout_marginTop="15dp"></TextView>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:text="@string/forum_address" android:id="@+id/forum_address" android:layout_width="wrap_content" android:layout_below="@+id/view1" android:layout_centerHorizontal="true" android:layout_marginTop="52dp" android:autoLink="map"></TextView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/forum_address"
        android:layout_marginTop="20dp"
        android:text="@string/note_taxi"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FCFC03" />

</RelativeLayout>
