<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/waverly">
    <TextView android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceLarge" android:textStyle="bold" android:text="@string/welcome_waverly" android:textColor="#000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:layout_marginBottom="90dp"></TextView>
    <Button android:id="@+id/button1" android:text="@string/bus" android:layout_height="wrap_content" android:layout_above="@+id/textView1" android:layout_alignLeft="@+id/textView1" android:layout_marginBottom="140dp" android:layout_width="70dp"></Button>
    <Button android:id="@+id/button3" android:text="@string/walk" android:layout_height="wrap_content" android:layout_alignBaseline="@+id/button2" android:layout_alignBottom="@+id/button2" android:layout_centerHorizontal="true" android:layout_width="70dp"></Button>
    <Button android:id="@+id/button2" android:text="@string/taxi" android:layout_width="70dp" android:layout_height="wrap_content" android:layout_alignBaseline="@+id/button1" android:layout_alignBottom="@+id/button1" android:layout_alignRight="@+id/textView1"></Button>
</RelativeLayout>
