<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout android:id="@+id/relativeLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:text="name" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:id="@+id/hotelName"></TextView>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_alignBaseline="@+id/hotelRating" android:layout_alignBottom="@+id/hotelRating" android:layout_alignParentLeft="true" android:text="@string/rating" android:paddingRight="5dp"></TextView>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:id="@+id/hotelRating" android:text="rating" android:layout_width="wrap_content" android:layout_below="@+id/hotelName" android:layout_toRightOf="@+id/textView1"></TextView>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_alignBaseline="@+id/hotelRating" android:layout_alignBottom="@+id/hotelRating" android:layout_alignParentRight="true" android:text="@string/minutes"></TextView>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:id="@+id/textView4" android:text="@string/upto" android:layout_width="wrap_content" android:layout_alignBaseline="@+id/textView2" android:layout_alignBottom="@+id/textView2" android:layout_toLeftOf="@+id/num_mins"></TextView>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:id="@+id/num_mins" android:text="TextView" android:layout_width="wrap_content" android:layout_below="@+id/hotelName" android:layout_toLeftOf="@+id/textView2" android:paddingLeft="2dp" android:paddingRight="2dp"></TextView>
    </RelativeLayout>
